Formatting fixes on mobile

--- a/source/css/layout/_overall.scss
+++ b/source/css/layout/_overall.scss
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html,
 body {
   height: 100%;
@@ -5,11 +12,12 @@ body {
 
 body {
   background: linear-gradient(90deg, $bg-secondary-color 10%, $bg-primary-color 90%);
+  margin: 20px;
 }
 
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+// Clearfix group
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
 }
